crates/rpkl-runtime/tests/snapshots/snapshot_tests__listing_to_list.snap
---
source: crates/rpkl-runtime/tests/snapshot_tests.rs
expression: eval_pkl(source)
---
{
  "listing": [
    1,
    2,
    3
  ],
  "r1": [
    1,
    2,
    3
  ]
}
