crates/rpkl-runtime/tests/snapshots/snapshot_tests__listing_with_strings.snap
---
source: crates/rpkl-runtime/tests/snapshot_tests.rs
assertion_line: 2175
expression: eval_pkl(source)
---
{
  "tags": [
    {
      "name": "urgent",
      "color": "red"
    },
    {
      "name": "low",
      "color": "gray"
    }
  ]
}
