crates/rpkl-runtime/tests/snapshots/snapshot_tests__local_property.snap
---
source: crates/rpkl-runtime/tests/snapshot_tests.rs
assertion_line: 1768
expression: eval_pkl(source)
---
{
  "helper": 10,
  "result": 20
}
