crates/rpkl-runtime/tests/snapshots/snapshot_tests__logical_operators.snap
---
source: crates/pkl-runtime/tests/snapshot_tests.rs
expression: eval_pkl(source)
---
{
  "and_tt": true,
  "and_tf": false,
  "or_tf": true,
  "or_ff": false,
  "not_t": false,
  "not_f": true
}
