crates/rpkl-runtime/tests/snapshots/snapshot_tests__map_contains_value.snap
---
source: crates/rpkl-runtime/tests/snapshot_tests.rs
expression: eval_pkl(source)
---
{
  "m": {
    "one": 1,
    "two": 2,
    "three": 3
  },
  "r1": true,
  "r2": false,
  "r3": false
}
