crates/rpkl-runtime/tests/snapshots/snapshot_tests__map_entries.snap
---
source: crates/rpkl-runtime/tests/snapshot_tests.rs
assertion_line: 2384
expression: eval_pkl_result(source)
---
{
  "m": {
    "x": 1,
    "y": 2
  },
  "entries": [
    [
      "x",
      1
    ],
    [
      "y",
      2
    ]
  ]
}
