crates/rpkl-runtime/tests/snapshots/snapshot_tests__map_entries_keys_values.snap
---
source: crates/rpkl-runtime/tests/snapshot_tests.rs
expression: eval_pkl(source)
---
{
  "m": {
    "x": 10,
    "y": 20
  },
  "r1": [
    [
      "x",
      10
    ],
    [
      "y",
      20
    ]
  ],
  "r2": [
    "x",
    "y"
  ],
  "r3": [
    10,
    20
  ]
}
