crates/rpkl-runtime/tests/snapshots/snapshot_tests__map_filter.snap
---
source: crates/rpkl-runtime/tests/snapshot_tests.rs
expression: eval_pkl(source)
---
{
  "m": {
    "one": 1,
    "two": 2,
    "three": 3
  },
  "r1": {
    "two": 2,
    "three": 3
  },
  "r2": {
    "two": 2,
    "three": 3
  }
}
