crates/rpkl-runtime/tests/snapshots/snapshot_tests__map_flat_map.snap
---
source: crates/rpkl-runtime/tests/snapshot_tests.rs
expression: eval_pkl(source)
---
{
  "m": {
    "one": 1,
    "two": 2
  },
  "r1": {},
  "r2": {
    "1": 3,
    "2": 6
  },
  "r3": {
    "one": "eno",
    "two": "owt"
  }
}
