crates/rpkl-runtime/tests/snapshots/snapshot_tests__map_flat_map_error.snap
---
source: crates/rpkl-runtime/tests/snapshot_tests.rs
expression: eval_pkl_result(source)
---
Force error: Type error: expected Map, got Int
